# Final_Cost-Calculator

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: demo_run.py
src/ai_cost_calculator/: __init__.py  ai-model_pricing.json  alerts.py  calculator.py  pricing_loader.py
src/ai_cost_calculator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/ai_cost_calculator/data/: model_pricing.json
tests/: conftest.py  test_cost_calculator.py  test_cost_calculator_flash_image.py
