[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-cost-calculator"
version = "0.1.0"
description = "AI model cost calculator with bundled pricing JSON"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
ai_cost_calculator = ["model_pricing.json"]

[project.scripts]
ai-cost = "ai_cost_calculator.calculator:main"
